--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
@@ -23,6 +23,7 @@
     "fbjs": "^1.0.0",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.13.0",
+    "npm-reinstall": "^3.1.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.8.0",
