--- a/MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
@@ -1,7 +1,8 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:movimuat.database.windows.net,1433;Initial Catalog=Movim_UAT;Persist Security Info=False;User ID=admin55;Password=(-Y.B444MuGunC&N*AwuthPE*5*Thz;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    },
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=tcp:movimuat.database.windows.net,1433;Initial Catalog=Movim_UAT;Persist Security Info=False;User ID=admin55;Password=(-Y.B444MuGunC&N*AwuthPE*5*Thz;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=localdb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
     "Logging": {
         "LogLevel": {
         }
