--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 MindOverMapper_Movim/.vs/MindOverMapper_Movim/v16/Server/sqlite3/db.lock
 *.lock
+MindOverMapper_Movim/.vs/MindOverMapper_Movim/v16/Server/sqlite3/db.lock
