Added Project Landing Page // Changed Navigation to Landing Page
-Main change in Dashboard.js - see comment "//**Change made here**"

--- a/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
@@ -45,6 +45,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="Services\" />
     <Folder Include="Artifacts\" />
+    <Folder Include="ClientApp\src\components\main\components\projectLandingPage\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Artifacts\index.adv">
@@ -93,7 +94,7 @@
     <!-- Include the newly-built files in the publish output -->
     <ItemGroup>
       <DistFiles Include="$(SpaRoot)build\**" />
-      <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
+      <ResolvedFileToPublish Include="@(DistFiles-&gt;'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
         <RelativePath>%(DistFiles.Identity)</RelativePath>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </ResolvedFileToPublish>
