--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 MindOverMapper_Movim/.vs/MindOverMapper_Movim/v16/Server/sqlite3/db.lock
 *.lock
 MindOverMapper_Movim/.vs/MindOverMapper_Movim/v16/Server/sqlite3/db.lock
+MindOverMapper_Movim/.vs/MindOverMapper_Movim/v16/Server/sqlite3/db.lock
