--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
@@ -27,6 +27,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.8.0",
+    "react-dropzone": "^10.2.1",
     "react-popup": "^0.10.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
