--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.1.1",
     "reactstrap": "^6.3.0",
+    "rifraf": "^2.0.3",
     "rimraf": "^2.6.2",
     "webpack": "^4.39.1",
     "yarn": "^1.17.3"
