beginnings of question formats, survey user-end site

--- a/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
@@ -40,6 +40,10 @@
     <None Remove="Artifacts\wordnet\.data.noun.icloud" />
     <None Remove="Artifacts\wordnet\.index.sense.icloud" />
     <None Remove="Artifacts\wordnet\index.verb" />
+    <None Include="ClientApp\src\components\surveyend\components\surveyView\surveyView\SurveyView.js" />
+    <None Include="ClientApp\src\components\surveyend\components\surveyView\surveyView\SurveyView.css" />
+    <None Include="**/*" />
+    <None Include="**/*" />
   </ItemGroup>
 
   <ItemGroup>
