--- a/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
@@ -51,6 +51,8 @@
     <Compile Remove="Migrations\20200405181101_Survey.Designer.cs" />
     <Compile Remove="Migrations\20200405190158_Survey.cs" />
     <Compile Remove="Migrations\20200405190158_Survey.Designer.cs" />
+    <Compile Remove="Migrations\20200406164827_SurveyTest.cs" />
+    <Compile Remove="Migrations\20200406164827_SurveyTest.Designer.cs" />
     <None Remove="Controllers\PrototypeController.cs" />
     <None Remove="Models\ConceptSurvey.cs" />
     <None Remove="Models\PrototypeSurvey.cs" />
