--- a/MindOverMapper_Movim/MindOverMapper_Movim/appsettings.Development.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/appsettings.Development.json
@@ -5,5 +5,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AppSettings": {
+    "awsTurkEndpoint": "https://mturk-requester-sandbox.us-east-1.amazonaws.com",
+    "awsSecret": "",
+    "awsAccessKey": "",
+    "awsRegion": "us-east-1"
   }
 }
