--- a/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
@@ -11,11 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.MTurk" Version="3.3.100.158" />
     <PackageReference Include="Microsoft.AspNetCore.App">
       <PrivateAssets Condition="'%(PackageReference.Version)' == ''">all</PrivateAssets>
       <Publish Condition="'%(PackageReference.Version)' == ''">true</Publish>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Azure.Storage.Common" Version="11.1.3" />
+    <PackageReference Include="Microsoft.Azure.Storage.File" Version="11.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
     <PackageReference Include="Sendgrid" Version="9.12.0" />
     <PackageReference Include="Syn.WordNet" Version="1.0.5" />
@@ -47,10 +50,12 @@
     <None Include="ClientApp\src\components\surveyend\components\surveyView\surveyView\SurveyView.css" />
     <None Include="**/*" />
     <None Include="**/*" />
+    <Compile Remove="AzureFileService.cs" />
     <Compile Remove="Migrations\20200405181101_Survey.cs" />
     <Compile Remove="Migrations\20200405181101_Survey.Designer.cs" />
     <Compile Remove="Migrations\20200405190158_Survey.cs" />
     <Compile Remove="Migrations\20200405190158_Survey.Designer.cs" />
+    <Compile Remove="Surveys\TurkQuestionBuilder.cs" />
     <None Remove="Controllers\PrototypeController.cs" />
     <None Remove="Models\ConceptSurvey.cs" />
     <None Remove="Models\PrototypeSurvey.cs" />
@@ -64,11 +69,11 @@
     <None Remove="Surveys\ISurvey.cs" />
     <None Remove="Surveys\SurveyFactory.cs" />
     <None Remove="Surveys\SurveyTypes.cs" />
+    <None Remove="Surveys\TurkSurvey.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Services\" />
     <Folder Include="Artifacts\" />
     <Folder Include="ClientApp\src\components\main\components\projectLandingPage\" />
   </ItemGroup>
