--- a/MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
@@ -7,9 +7,14 @@
         "LogLevel": {
         }
     },
-    "AppSettings": {
-        "Secret": "EgLJorPYrtxVwHPonFS8Dg==",
-        "SendGridAPIKey": "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"
-    },
+  "AppSettings": {
+    "Secret": "EgLJorPYrtxVwHPonFS8Dg==",
+    "SendGridAPIKey": "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",
+    "awsTurkEndpoint": "https://mturk-requester-sandbox.us-east-1.amazonaws.com",
+    "awsSecret": "",
+    "awsAccessKey": "",
+    "awsRegion": "us-east-1",
+    "AzureFileStoreConnectionString":  ""
+  },
     "AllowedHosts": ""
 }
