--- a/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/MindOverMapper_Movim.csproj
@@ -51,6 +51,10 @@
     <Compile Remove="Migrations\20200405181101_Survey.Designer.cs" />
     <Compile Remove="Migrations\20200410050326_Initial.cs" />
     <Compile Remove="Migrations\20200410050326_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200415012311_SurveyQuestion.cs" />
+    <Compile Remove="Migrations\20200415012311_SurveyQuestion.Designer.cs" />
+    <Compile Remove="Migrations\20200415021622_SurveyQuestion2.cs" />
+    <Compile Remove="Migrations\20200415021622_SurveyQuestion2.Designer.cs" />
     <None Remove="Controllers\PrototypeController.cs" />
     <None Remove="Models\ConceptSurvey.cs" />
     <None Remove="Models\PrototypeSurvey.cs" />
@@ -137,7 +141,7 @@
     <!-- Include the newly-built files in the publish output -->
     <ItemGroup>
       <DistFiles Include="$(SpaRoot)build\**" />
-      <ResolvedFileToPublish Include="@(DistFiles-&gt;'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
+      <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
         <RelativePath>%(DistFiles.Identity)</RelativePath>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </ResolvedFileToPublish>
