Fixed prototype file download

--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "fbjs": "^1.0.0",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.13.0",
     "react": "^16.13.0",
