--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ MindOverMapper_Movim/.vs/MindOverMapper_Movim/v16/Server/sqlite3/db.lock
 MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
 MindOverMapper_Movim/MindOverMapper_Movim/obj/*
 MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
+MindOverMapper_Movim/MindOverMapper_Movim/appsettings.json
